--- a/index.html
+++ b/index.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>視力回復3Dトレーニング - 片手で簡単視力トレーニング！</title>
-    <meta name="description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。ステレオグラムを利用したトレーニングで目をリフレッシュしましょう。">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', 'Noto Sans JP', sans-serif;
+    <meta name="description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。ステレオグラムを利用したトレーニングで目をリフレッシュしましょう。毎日3分で視力アップ！">
+    <meta name="keywords" content="視力回復,3Dステレオグラム,視力トレーニング,iPhoneアプリ,目の疲れ,視力アップ">
+    <link rel="canonical" href="https://yoshihiko-o.github.io/3Drds.github.io/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yoshihiko-o.github.io/3Drds.github.io/">
+    <meta property="og:title" content="視力回復3Dトレーニング - 片手で簡単視力トレーニング！">
+    <meta property="og:description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。ステレオグラムを利用したトレーニングで目をリフレッシュしましょう。">
+    <meta property="og:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/screenshot1.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://yoshihiko-o.github.io/3Drds.github.io/">
+    <meta property="twitter:title" content="視力回復3Dトレーニング - 片手で簡単視力トレーニング！">
+    <meta property="twitter:description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。ステレオグラムを利用したトレーニングで目をリフレッシュしましょう。">
+    <meta property="twitter:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/screenshot1.png">
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "視力回復3Dトレーニング",
+      "operatingSystem": "iOS",
+      "applicationCategory": "HealthApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "JPY"
+      },
+      "downloadUrl": "https://apps.apple.com/jp/app/%E8%A6%96%E5%8A%9B%E5%9B%9E%E5%BE%A93d%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0-%E7%89%87%E6%89%8B%E3%81%A7%E7%B0%A1%E5%8D%98%E8%A6%96%E5%8A%9B%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0/id1078011793",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "reviewCount": "100"
       }
+    }
+    </script>
+
+    <link rel="stylesheet" href="style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Noto+Sans+JP:wght@400;700&display=swap"
+        rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', 'Noto Sans JP', sans-serif;
+        }
     </style>
 </head>
+
 <body>
     <header>
         <div class="container nav-container">
@@ -20,7 +63,9 @@
                 <img src="images/icon.png" alt="視力回復3Dトレーニング アイコン">
                 <span>視力回復3Dトレーニング</span>
             </div>
-            <a href="https://apps.apple.com/jp/app/%E8%A6%96%E5%8A%9B%E5%9B%9E%E5%BE%A93d%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0-%E7%89%87%E6%89%8B%E3%81%A7%E7%B0%A1%E5%8D%98%E8%A6%96%E5%8A%9B%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0/id1078011793" class="contact-button" style="background: var(--secondary-color); color: white; border: none;">ダウンロード</a>
+            <a href="https://apps.apple.com/jp/app/%E8%A6%96%E5%8A%9B%E5%9B%9E%E5%BE%A93d%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0-%E7%89%87%E6%89%8B%E3%81%A7%E7%B0%A1%E5%8D%98%E8%A6%96%E5%8A%9B%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0/id1078011793"
+                class="contact-button"
+                style="background: var(--secondary-color); color: white; border: none;">ダウンロード</a>
         </div>
     </header>
 
@@ -34,8 +79,10 @@
                         毎日の隙間時間に、楽しみながら目のトレーニングをしませんか？
                         3Dステレオグラムを使った本格的な視力回復アプリが登場。
                     </p>
-                    <a href="https://apps.apple.com/jp/app/%E8%A6%96%E5%8A%9B%E5%9B%9E%E5%BE%A93d%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0-%E7%89%87%E6%89%8B%E3%81%A7%E7%B0%A1%E5%8D%98%E8%A6%96%E5%8A%9B%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0/id1078011793" class="btn-download">
-                        <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/ja-jp?size=250x83&amp;releaseDate=1454198400&h=d2b27072f567409241b7117366b449fe" alt="Download on the App Store">
+                    <a href="https://apps.apple.com/jp/app/%E8%A6%96%E5%8A%9B%E5%9B%9E%E5%BE%A93d%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0-%E7%89%87%E6%89%8B%E3%81%A7%E7%B0%A1%E5%8D%98%E8%A6%96%E5%8A%9B%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0/id1078011793"
+                        class="btn-download">
+                        <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/ja-jp?size=250x83&amp;releaseDate=1454198400&h=d2b27072f567409241b7117366b449fe"
+                            alt="Download on the App Store">
                     </a>
                 </div>
                 <div class="hero-image">
@@ -73,4 +120,5 @@
         </div>
     </footer>
 </body>
+
 </html>
