Add Creative Mode section and new images

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yoshihiko-o.github.io/3Drds.github.io/">
     <meta property="og:title" content="視力回復3Dトレーニング - 片手で簡単視力トレーニング！">
-    <meta property="og:description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。ステレオグラムを利用したトレーニングで目をリフレッシュしましょう。">
-    <meta property="og:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/screenshot1.png">
+    <meta property="og:description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。クリエイティブモード搭載！絵文字や数式を無限に生成して楽しくトレーニング。">
+    <meta property="og:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/top_screen_new.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yoshihiko-o.github.io/3Drds.github.io/">
     <meta property="twitter:title" content="視力回復3Dトレーニング - 片手で簡単視力トレーニング！">
-    <meta property="twitter:description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。ステレオグラムを利用したトレーニングで目をリフレッシュしましょう。">
-    <meta property="twitter:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/screenshot1.png">
+    <meta property="twitter:description"
+        content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。クリエイティブモード搭載！絵文字や数式を無限に生成して楽しくトレーニング。">
+    <meta property="twitter:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/top_screen_new.png">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -86,7 +87,31 @@
                     </a>
                 </div>
                 <div class="hero-image">
-                    <img src="images/screenshot1.png" alt="アプリのスクリーンショット">
+                    <img src="images/top_screen_new.png" alt="アプリのスクリーンショット">
+                </div>
+            </div>
+        </section>
+
+        <section class="creative-mode" style="background-color: #f0f8ff;">
+            <div class="container">
+                <div class="features-wrapper"
+                    style="display: flex; align-items: center; gap: 40px; justify-content: space-between;">
+                    <div class="feature-content" style="flex: 1;">
+                        <span class="tagline" style="background: rgba(85, 239, 196, 0.2); color: #00b894;">New
+                            Feature</span>
+                        <h2>クリエイティブモード搭載</h2>
+                        <p>
+                            新しく追加された「視力3Dオートジェネレーター」機能で、トレーニングは無限大に。<br>
+                            絵文字、数式、ガボールパッチなど、様々なパターンを自動生成します。<br>
+                            飽きずに毎日続けられる、あなただけのトレーニング体験を提供します。
+                        </p>
+                    </div>
+                    <div class="feature-images" style="flex: 1; display: flex; gap: 20px;">
+                        <img src="images/feature_gabor.png" alt="ガボールパッチ"
+                            style="width: 48%; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+                        <img src="images/feature_generator.png" alt="ジェネレーター"
+                            style="width: 48%; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
+                    </div>
                 </div>
             </div>
         </section>
