Update Hero with Key Visual

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://yoshihiko-o.github.io/3Drds.github.io/">
     <meta property="og:title" content="視力回復3Dトレーニング - 片手で簡単視力トレーニング！">
     <meta property="og:description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。クリエイティブモード搭載！絵文字や数式を無限に生成して楽しくトレーニング。">
-    <meta property="og:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/top_screen_new.png">
+    <meta property="og:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/key_visual.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -22,7 +22,7 @@
     <meta property="twitter:title" content="視力回復3Dトレーニング - 片手で簡単視力トレーニング！">
     <meta property="twitter:description"
         content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。クリエイティブモード搭載！絵文字や数式を無限に生成して楽しくトレーニング。">
-    <meta property="twitter:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/top_screen_new.png">
+    <meta property="twitter:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/key_visual.jpg">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -87,7 +87,7 @@
                     </a>
                 </div>
                 <div class="hero-image">
-                    <img src="images/top_screen_new.png" alt="アプリのスクリーンショット">
+                    <img src="images/key_visual.jpg" alt="視力回復3Dトレーニング キービジュアル">
                 </div>
             </div>
         </section>
