Add Privacy Policy

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
             <a href="mailto:kimuraenator_1110@yahoo.co.jp" class="contact-button">
                 kimuraenator_1110@yahoo.co.jp
             </a>
+            <div style="margin-top: 20px;">
+                <a href="privacy.html"
+                    style="color: rgba(255,255,255,0.7); text-decoration: none; font-size: 0.9rem;">プライバシーポリシー</a>
+            </div>
             <div class="copyright">
                 &copy; 2025 Eyesight Recovery 3D Training. All rights reserved.
             </div>
