Add English support and language switchers

--- a/index_en.html
+++ b/index_en.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>視力回復3Dトレーニング - 片手で簡単視力トレーニング！</title>
-    <meta name="description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。ステレオグラムを利用したトレーニングで目をリフレッシュしましょう。毎日3分で視力アップ！">
-    <meta name="keywords" content="視力回復,3Dステレオグラム,視力トレーニング,iPhoneアプリ,目の疲れ,視力アップ">
+    <title>Eyesight Recovery 3D Training - Easy training with one hand!</title>
+    <meta name="description"
+        content="Eyesight Recovery 3D Training is an app that allows you to easily train your eyesight with one hand. Refresh your eyes with training using stereograms. Improve your eyesight in just 3 minutes a day!">
+    <meta name="keywords"
+        content="eyesight recovery, 3D stereogram, vision training, iPhone app, eye strain, improve eyesight">
     <link rel="canonical" href="https://yoshihiko-o.github.io/3Drds.github.io/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yoshihiko-o.github.io/3Drds.github.io/">
-    <meta property="og:title" content="視力回復3Dトレーニング - 片手で簡単視力トレーニング！">
-    <meta property="og:description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。クリエイティブモード搭載！絵文字や数式を無限に生成して楽しくトレーニング。">
+    <meta property="og:url" content="https://yoshihiko-o.github.io/3Drds.github.io/index_en.html">
+    <meta property="og:title" content="Eyesight Recovery 3D Training - Easy training with one hand!">
+    <meta property="og:description"
+        content="Eyesight Recovery 3D Training is an app that allows you to easily train your eyesight with one hand. Refresh your eyes with training using stereograms.">
     <meta property="og:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/key_visual.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yoshihiko-o.github.io/3Drds.github.io/">
-    <meta property="twitter:title" content="視力回復3Dトレーニング - 片手で簡単視力トレーニング！">
+    <meta property="twitter:url" content="https://yoshihiko-o.github.io/3Drds.github.io/index_en.html">
+    <meta property="twitter:title" content="Eyesight Recovery 3D Training - Easy training with one hand!">
     <meta property="twitter:description"
-        content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。クリエイティブモード搭載！絵文字や数式を無限に生成して楽しくトレーニング。">
+        content="Eyesight Recovery 3D Training is an app that allows you to easily train your eyesight with one hand. Refresh your eyes with training using stereograms.">
     <meta property="twitter:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/key_visual.jpg">
 
     <!-- JSON-LD Structured Data -->
@@ -29,7 +32,7 @@
     {
       "@context": "https://schema.org",
       "@type": "SoftwareApplication",
-      "name": "視力回復3Dトレーニング",
+      "name": "Eyesight Recovery 3D Training",
       "operatingSystem": "iOS",
       "applicationCategory": "HealthApplication",
       "offers": {
@@ -75,14 +78,14 @@
     <header>
         <div class="container nav-container">
             <div class="logo">
-                <img src="images/icon.png" alt="視力回復3Dトレーニング アイコン">
-                <span>視力回復3Dトレーニング</span>
+                <img src="images/icon.png" alt="Eyesight Recovery 3D Training Icon">
+                <span>Eyesight Recovery 3D Training</span>
             </div>
             <div style="display: flex; align-items: center;">
-                <a href="index_en.html" class="lang-switch">🇺🇸 EN</a>
+                <a href="index.html" class="lang-switch">🇯🇵 JA</a>
                 <a href="https://apps.apple.com/jp/app/%E8%A6%96%E5%8A%9B%E5%9B%9E%E5%BE%A93d%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0-%E7%89%87%E6%89%8B%E3%81%A7%E7%B0%A1%E5%8D%98%E8%A6%96%E5%8A%9B%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0/id1078011793"
                     class="contact-button"
-                    style="background: var(--secondary-color); color: white; border: none;">ダウンロード</a>
+                    style="background: var(--secondary-color); color: white; border: none;">Download</a>
             </div>
         </div>
     </header>
@@ -92,19 +95,19 @@
             <div class="container hero">
                 <div class="hero-content">
                     <span class="tagline">New Update Available</span>
-                    <h1>片手で簡単<br>視力回復トレーニング！</h1>
+                    <h1>Easy Eyesight Recovery<br>Training with One Hand!</h1>
                     <p>
-                        毎日の隙間時間に、楽しみながら目のトレーニングをしませんか？
-                        3Dステレオグラムを使った本格的な視力回復アプリが登場。
+                        Why not train your eyes while having fun in your spare time every day?
+                        Introducing a full-scale eyesight recovery app using 3D stereograms.
                     </p>
                     <a href="https://apps.apple.com/jp/app/%E8%A6%96%E5%8A%9B%E5%9B%9E%E5%BE%A93d%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0-%E7%89%87%E6%89%8B%E3%81%A7%E7%B0%A1%E5%8D%98%E8%A6%96%E5%8A%9B%E3%83%88%E3%83%AC%E3%83%BC%E3%83%8B%E3%83%B3%E3%82%B0/id1078011793"
                         class="btn-download">
-                        <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/ja-jp?size=250x83&amp;releaseDate=1454198400&h=d2b27072f567409241b7117366b449fe"
+                        <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1454198400&h=d2b27072f567409241b7117366b449fe"
                             alt="Download on the App Store">
                     </a>
                 </div>
                 <div class="hero-image">
-                    <img src="images/key_visual.jpg" alt="視力回復3Dトレーニング キービジュアル">
+                    <img src="images/key_visual.jpg" alt="Eyesight Recovery 3D Training Key Visual">
                 </div>
             </div>
         </section>
@@ -116,17 +119,19 @@
                     <div class="feature-content" style="flex: 1;">
                         <span class="tagline" style="background: rgba(85, 239, 196, 0.2); color: #00b894;">New
                             Feature</span>
-                        <h2>クリエイティブモード搭載</h2>
+                        <h2>Creative Mode Equipped</h2>
                         <p>
-                            新しく追加された「視力3Dオートジェネレーター」機能で、トレーニングは無限大に。<br>
-                            絵文字、数式、ガボールパッチなど、様々なパターンを自動生成します。<br>
-                            飽きずに毎日続けられる、あなただけのトレーニング体験を提供します。
+                            With the newly added "Visual Acuity 3D Auto Generator" feature, training is infinite.<br>
+                            Automatically generates various patterns such as emojis, mathematical formulas, and Gabor
+                            patches.<br>
+                            We provide a training experience just for you that you can continue every day without
+                            getting bored.
                         </p>
                     </div>
                     <div class="feature-images" style="flex: 1; display: flex; gap: 20px;">
-                        <img src="images/feature_gabor.png" alt="ガボールパッチ"
+                        <img src="images/feature_gabor.png" alt="Gabor Patch"
                             style="width: 48%; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
-                        <img src="images/feature_generator.png" alt="ジェネレーター"
+                        <img src="images/feature_generator.png" alt="Generator"
                             style="width: 48%; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.1);">
                     </div>
                 </div>
@@ -135,14 +140,14 @@
 
         <section class="showcase">
             <div class="container">
-                <h2>アプリ画面</h2>
-                <p>シンプルで使いやすいインターフェース</p>
+                <h2>App Screens</h2>
+                <p>Simple and easy-to-use interface</p>
                 <div class="gallery">
                     <div class="screenshot-card">
-                        <img src="images/screenshot1.png" alt="スクリーンショット1">
+                        <img src="images/screenshot1.png" alt="Screenshot 1">
                     </div>
                     <div class="screenshot-card">
-                        <img src="images/screenshot2.png" alt="スクリーンショット2">
+                        <img src="images/screenshot2.png" alt="Screenshot 2">
                     </div>
                 </div>
             </div>
@@ -151,14 +156,14 @@
 
     <footer>
         <div class="container footer-content">
-            <h2>お問い合わせ</h2>
-            <p>ご質問やご要望がございましたら、お気軽にご連絡ください。</p>
+            <h2>Contact Us</h2>
+            <p>If you have any questions or requests, please feel free to contact us.</p>
             <a href="mailto:kimuraenator_1110@yahoo.co.jp" class="contact-button">
                 kimuraenator_1110@yahoo.co.jp
             </a>
             <div style="margin-top: 20px;">
-                <a href="privacy.html"
-                    style="color: rgba(255,255,255,0.7); text-decoration: none; font-size: 0.9rem;">プライバシーポリシー</a>
+                <a href="privacy_en.html"
+                    style="color: rgba(255,255,255,0.7); text-decoration: none; font-size: 0.9rem;">Privacy Policy</a>
             </div>
             <div class="copyright">
                 &copy; 2025 Eyesight Recovery 3D Training. All rights reserved.
