--- a/privacy.html
+++ b/privacy.html
@@ -51,11 +51,26 @@
         .back-link:hover {
             text-decoration: underline;
         }
+
+        .lang-switch {
+            text-decoration: none;
+            color: #2d3436;
+            font-weight: 600;
+            float: right;
+            padding: 5px 10px;
+            border-radius: 8px;
+            transition: background-color 0.3s;
+        }
+
+        .lang-switch:hover {
+            background-color: rgba(0, 0, 0, 0.05);
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
+        <a href="privacy_en.html" class="lang-switch">🇺🇸 EN</a>
         <h1>プライバシーポリシー</h1>
 
         <p>「視力回復3Dトレーニング」（以下、「当アプリ」といいます）は、利用者の個人情報の保護を重要視しています。本プライバシーポリシーでは、当アプリがどのような情報を収集し、どのように使用するかについて説明します。</p>
