Update Analytics and Domain URLs

--- a/index_en.html
+++ b/index_en.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W47JXR1EYY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-W47JXR1EYY');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eyesight Recovery 3D Training - Easy training with one hand!</title>
@@ -9,23 +18,23 @@
         content="Eyesight Recovery 3D Training is an app that allows you to easily train your eyesight with one hand. Refresh your eyes with training using stereograms. Improve your eyesight in just 3 minutes a day!">
     <meta name="keywords"
         content="eyesight recovery, 3D stereogram, vision training, iPhone app, eye strain, improve eyesight">
-    <link rel="canonical" href="https://yoshihiko-o.github.io/3Drds.github.io/">
+    <link rel="canonical" href="https://rdseyerecover.appspot.com/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yoshihiko-o.github.io/3Drds.github.io/index_en.html">
+    <meta property="og:url" content="https://rdseyerecover.appspot.com/index_en.html">
     <meta property="og:title" content="Eyesight Recovery 3D Training - Easy training with one hand!">
     <meta property="og:description"
         content="Eyesight Recovery 3D Training is an app that allows you to easily train your eyesight with one hand. Refresh your eyes with training using stereograms.">
-    <meta property="og:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/key_visual.jpg">
+    <meta property="og:image" content="https://rdseyerecover.appspot.com/images/key_visual.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yoshihiko-o.github.io/3Drds.github.io/index_en.html">
+    <meta property="twitter:url" content="https://rdseyerecover.appspot.com/index_en.html">
     <meta property="twitter:title" content="Eyesight Recovery 3D Training - Easy training with one hand!">
     <meta property="twitter:description"
         content="Eyesight Recovery 3D Training is an app that allows you to easily train your eyesight with one hand. Refresh your eyes with training using stereograms.">
-    <meta property="twitter:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/key_visual.jpg">
+    <meta property="twitter:image" content="https://rdseyerecover.appspot.com/images/key_visual.jpg">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
