--- a/index.html
+++ b/index.html
@@ -2,27 +2,36 @@
 <html lang="ja">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W47JXR1EYY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-W47JXR1EYY');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>視力回復3Dトレーニング - 片手で簡単視力トレーニング！</title>
     <meta name="description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。ステレオグラムを利用したトレーニングで目をリフレッシュしましょう。毎日3分で視力アップ！">
     <meta name="keywords" content="視力回復,3Dステレオグラム,視力トレーニング,iPhoneアプリ,目の疲れ,視力アップ">
-    <link rel="canonical" href="https://yoshihiko-o.github.io/3Drds.github.io/">
+    <link rel="canonical" href="https://rdseyerecover.appspot.com/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yoshihiko-o.github.io/3Drds.github.io/">
+    <meta property="og:url" content="https://rdseyerecover.appspot.com/">
     <meta property="og:title" content="視力回復3Dトレーニング - 片手で簡単視力トレーニング！">
     <meta property="og:description" content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。クリエイティブモード搭載！絵文字や数式を無限に生成して楽しくトレーニング。">
-    <meta property="og:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/key_visual.jpg">
+    <meta property="og:image" content="https://rdseyerecover.appspot.com/images/key_visual.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yoshihiko-o.github.io/3Drds.github.io/">
+    <meta property="twitter:url" content="https://rdseyerecover.appspot.com/">
     <meta property="twitter:title" content="視力回復3Dトレーニング - 片手で簡単視力トレーニング！">
     <meta property="twitter:description"
         content="視力回復3Dトレーニングは、片手で簡単にできる視力回復アプリです。クリエイティブモード搭載！絵文字や数式を無限に生成して楽しくトレーニング。">
-    <meta property="twitter:image" content="https://yoshihiko-o.github.io/3Drds.github.io/images/key_visual.jpg">
+    <meta property="twitter:image" content="https://rdseyerecover.appspot.com/images/key_visual.jpg">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
